<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:background="#ffffff"
  android:layout_height="wrap_content">
  
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:paddingBottom="20dp"
	    android:orientation="vertical" >
	
	    <EditText
	        android:id="@+id/editTextEmail"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="12"
	        android:layout_marginTop="80dp"
	        android:hint="@string/email"
	        android:inputType="textEmailAddress" />
	
	   <EditText
	        android:id="@+id/editTextPassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dp"
	        android:ems="12"
	        android:hint="@string/password"
	        android:inputType="textPassword" >
	    </EditText>
	
	    <Button
	        android:id="@+id/buttonSignIn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dp"
	        android:background="@drawable/white"
	        android:text="@string/btn_signin" />
	
	    <TextView
	        android:id="@+id/textViewForget"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="100dp"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/etv_forgot"
	        android:textColor="#848484" />
	
	</LinearLayout>

</ScrollView>