<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/imageLogo"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="34dp"
        android:background="@drawable/orange"
        android:text="@string/btn_register" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonRegister"
        android:layout_alignBottom="@+id/buttonRegister"
        android:layout_alignParentRight="true"
        android:layout_marginRight="37dp"
        android:background="@drawable/white"
        android:text="@string/btn_signin" />

    <TextView
        android:id="@+id/textViewLogoSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="italic"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@color/orange"
        android:padding="15dp"
        android:src="@drawable/tool" />

</RelativeLayout>
