<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#ffffff"
    android:padding="14dp">

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile"
            android:src="@drawable/profile" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewNameProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/nombre_1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewEmailProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_1" />

            <TextView
                android:id="@+id/textViewTelProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:clickable="true"
                android:id="@+id/ratingProfile"
                android:paddingTop="5dp">

                <RatingBar
                    android:id="@+id/ratingBarProfile"
                    style="@style/CustomRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:minHeight="24dp"
                    android:layout_gravity="center_vertical"
                    android:rating="4"
                    android:stepSize="1" />

	            <TextView android:id="@+id/textViewTotal" 
	                android:layout_width="wrap_content" 
	                android:layout_height="wrap_content" 
	                android:layout_gravity="center_vertical"
	                android:text="@string/count_1" 
	                android:paddingLeft="10dp"
	                android:textAppearance="?android:attr/textAppearanceSmall" >	                
	            </TextView>
            
            </LinearLayout>

            

            

        </LinearLayout>

    </LinearLayout>

       <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="135dp" >

                <LinearLayout
                    android:id="@+id/tabInformation"
                    android:layout_width="match_parent"
                    android:layout_height="204dp" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Reparación de impresoras" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    
                    <TextView
                        android:id="@+id/textViewAddressProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/direccion_1" />
                    
                </LinearLayout>

            </FrameLayout>

            <Button
                android:id="@+id/buttonLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout" />

        </LinearLayout>
    </TabHost>


</LinearLayout>
