<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageViewPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nombre_1"
        android:padding="3dp"
        android:src="@drawable/person" />

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.49"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/nombre_1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/direccion_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RatingBar
                android:id="@+id/ratingBarHome"
                style="@style/CustomRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="24dp"
                android:layout_gravity="center_vertical"
                android:rating="4"
                android:isIndicator="true" 
                android:stepSize="1" />

            <TextView
                android:id="@+id/textViewCountStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_1"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>